Implementar limpieza automática de cache y tokens corruptos para resolver error 403

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="description" content="LotoIA - Plataforma de lotería online con inteligencia artificial">
+  <meta name="app-version" content="1.14.2025">
   <meta name="theme-color" content="#4CAF50">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Preconectar con dominios importantes -->
